# event-tracker-agents

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  MIGRATION_MAP.md
src/: __init__.py  event_schema.py
src/adapters/: __init__.py  base.py
src/notifiers/: base.py
src/rules/: base.py
templates/tracker-template-python/: example_tracker.py
templates/tracker-template-typescript/: example-tracker.ts
tests/: test_event_schema.py
